manifests/templates/aks-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ep-mern-kea-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ep-mern-kea-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: ep-mern-kea-frontend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: ep-mern-kea-frontend
        image: azurecontainerlorde.azurecr.io/ep-mern-kea-client:${BUILD_TAG}
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: ep-mern-kea-frontend
spec:
  type: Loadbalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ep-mern-kea-frontend
