manifests/templates/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ep-ingress
spec:
  ingressClassName: ingress-nginx-controller
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ep-mern-kea-frontend
            port:
              number: 80
